--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   pgadmin:
     container_name: pgadmin_container
-    image: dpage/pgadmin
+    image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: "mircelal99@gmail.com"
       PGADMIN_DEFAULT_PASSWORD: "B*T_ity6"
